* Reworked damage calculation to fit OH3 formula better
* Luck support
* Teleportation spell

HERO:
* First Aid secondary skill
* Improved formula for necromancy to match better OH3

TOWNS:
* Sending resources to other players by marketplace
* Support for new town structures:
- Lighthouse
- Colossus
- Guardian Spirit
- Necromancy Amplifier
- Soul Prison

OBJECTS:


0.75 -> 0.8 (Mar 01 2010)
GENERAL:
* Victory and loss conditions are supported. It's now possible to win or lose the game.
* Implemented assembling and disassembling of combination artifacts.
* Kingdom Overview screen is now available.
* Implemented Grail (puzzle map, digging, constructing ultimate building)
* Replaced TTF fonts with original ones.

ADVENTURE MAP:
* Implemented rivers animations (thx to GrayFace).

BATTLES:
* Fire Shield spell (and creature ability) supported
* affecting morale/luck and casting spell after attack creature abilities supported

HERO:
* Implementation of Scholar secondary skill

TOWN:
* New left-bottom info panel functionalities.

TOWNS:
* new town structures supported:
- Ballista Yard
- Blood Obelisk
- Brimstone Clouds
- Dwarven Treasury
- Fountain of Fortune
- Glyphs of Fear
- Mystic Pond
- Thieves Guild
- Special Grail functionalities for Dungeon, Stronghold and Fortress

OBJECTS:
New objects supported:
- Border gate
- Den of Thieves
- Lighthouse
- Obelisk
- Quest Guard
- Seer hut



A lot of of various bugfixes and improvements:
http://bugs.vcmi.eu/changelog_page.php?version_id=14



0.74 -> 0.75 (Dec 01 2009)
GENERAL:
* Implemented "main menu" in-game option.
* Hide the mouse cursor while displaying a popup window.
* Better handling of huge and empty message boxes (still needs more changes)
* Fixed several crashes when exiting.

ADVENTURE INTERFACE:
* Movement cursor shown for unguarded enemy towns.
* Battle cursor shown for guarded enemy garrisons.
* Clicking on the border no longer opens an empty info windows

HERO WINDOW: